--- a/movieengine/src/main/resources/application.properties
+++ b/movieengine/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Specify the DNS URI of your Azure Cosmos DB.
+spring.cloud.azure.cosmos.endpoint=https://movie-engine-db.documents.azure.com:443/
 
+# Specify the access key for your database.
+spring.cloud.azure.cosmos.key=<paste cosmosdb key here>
+
+# Specify the name of your database.
+spring.cloud.azure.cosmos.database=MovieEngineDb
+spring.cloud.azure.cosmos.populate-query-metrics=true
+
+# Specify base api path
+server.servlet.context-path=/api
