--- a/movieengine/pom.xml
+++ b/movieengine/pom.xml
@@ -41,8 +41,29 @@
       <artifactId>spring-cloud-azure-starter-data-cosmos</artifactId>
       <version>4.0.0</version>
     </dependency>
-  </dependencies>  
-  <build> 
+    <dependency>
+      <groupId>com.microsoft.sqlserver</groupId>
+      <artifactId>mssql-jdbc</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+  </dependencies>
+  <build>
     <plugins> 
       <plugin> 
         <groupId>org.springframework.boot</groupId>  
